--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ chrono = "0.4.23"
 env_logger = "0.10.0"
 log = "0.4.17"
 microkv = "0.2.9"
+sha2 = "0.10.6"
 tokio = { version = "1.24.2", features = ["macros"] }
 totp-rs = { version = "4.2.0" }
 tracing = "0.1.37"
